--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,28 @@
 body {
   margin: 0 auto;
   max-width: 1024px;
+  padding: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 2em;
+}
+
+h2, h3 {
+  margin-bottom: 10px;
+}
+
+ul {
+  margin-top: 10px;
+}
+
+.no-discs {
+  list-style: none;
+  padding: 0;
+}
+
+.fa {
+  margin-right: 5px;
+}
+
+#goal {
+  font-size: 20px;
 }
